# rrtos

./: .gitignore  .gitmodules  AI_TESTING_REPORT.md  CMakeLists.txt  CMakeLists.txt.bak  README.md  ai_models.yaml  pixi.toml
ai/: CMakeLists.txt  iree_bare_metal_config.h  iree_sources.cmake  iree_vec_add.mlir  iree_vec_add_c_module.c  mobilenet_simple.mlir  mobilenet_test_module_c.c
ai/include/: ai_backend.h  ai_model_registry.h  ai_runtime.h  iree_config_custom.h
ai/src/: ai_backend.c  ai_model_registry.c  ai_runtime.c  iree_rtos_sync.c  malloc_wrapper.c  stdio_wrapper.c
apps/ai_demo/: CMakeLists.txt  README.md  ai_model.c  ai_model.h  face_56x56_int8.h  main.c  model_impl.c
apps/ai_registry_test/: CMakeLists.txt  main.c
apps/ai_test/: CMakeLists.txt  main.c
apps/demo/: main.c
apps/mnist_app/: CMakeLists.txt  README.md
apps/mnist_app/src/: hooks.c  main.c
arch/riscv/: link.ld  link_flash.ld
arch/riscv/include/: riscv_atomic.h  riscv_csr.h
arch/riscv/src/: context.S  startup.S  trap.c
cmake/: platform_esp32c3.cmake  riscv32-gcc.cmake  riscv32-pixi.cmake  riscv64-linux-gnu.cmake  riscv64-pixi.cmake  riscv_arch.cmake
config/: os_config.h
docs/: MEMORY_ANALYSIS.md  MOBILENET_GENERATION_GUIDE.md  OPTIMIZATION_REPORT.md  PICOLIBC_USAGE.md  switching_guide.md
docs/reports/: CONVERSION_REPORT.md  MOBILENET_QUICKSTART.md  MODEL_INTEGRATION_STATUS.md  PICOLIBC_FINAL_REPORT.md  PICOLIBC_INTEGRATION_SUMMARY.md  PIXI_PLAN.md  SIMULATION_TEST_REPORT.md
federated/include/: fl_client.h  fl_compress.h  fl_types.h
federated/src/: fl_client.c  fl_compress.c
hal/: CMakeLists.txt
hal/include/: hal_clint.h  hal_plic.h  hal_uart.h
hal/src/: hal_clint.c  hal_plic.c  hal_uart.c  math_compat.c
hal/src/esp32/: esp32c3.ld  hal_irq_esp32.c  hal_timer_esp32.c  hal_uart_esp32.c
kernel/: CMakeLists.txt
kernel/include/: alloca.h  assert.h  ctype.h  errno.h  inttypes.h  os_kernel.h  os_math.h  os_string.h  os_types.h  stdio.h  stdlib.h  string.h
kernel/src/: os_ipc.c  os_sched.c  os_string.c  os_timer.c  picolibc_syscalls.c
memory/: CMakeLists.txt
memory/include/: os_mem.h
memory/src/: os_mem.c
multicore/include/: os_smp.h
multicore/src/: os_smp.c
onnx_models/: ad01_int8.onnx  sinus_float.onnx
scripts/: DEPRECATED.md  ai_codegen.py  build_picolibc.sh.deprecated  compile_mobilenet_static.sh  compile_models_to_emitc.sh  convert_all_to_emitc.py  convert_tflite_iree.py  convert_tflite_to_tosa.py  get_picolibc.sh.deprecated  platform.repl  run_qemu.sh  run_renode.resc  test_ai_registry.sh
scripts/simulation/: ai_demo_rv32.resc  ai_demo_rv64.resc  esp32c3.repl  esp32c3.resc  k210_mobilenet.resc  k210_uart1.repl  mobilenet_test.resc  mobilenet_test_fe310.resc  mobilenet_test_flash.resc  mobilenet_test_rv32.resc  person_detect_rv32.resc  polarfire_mobilenet.resc  riscv32_flash.repl  riscv32_virt.repl  riscv64_virt.repl  sifive-fe310-no-svd.repl  test_platform.repl  test_renode.resc
security/include/: os_pmp.h
security/src/: os_pmp.c
zoo/: README.md  benchmark.md  workflow.md
zoo/benchmarks/: memory_analysis.md  memory_baseline.md
zoo/iree_static/: efficientnet_int8_rv64.h  miniresnet_int8.h  miniresnet_int8_rv64.h  st_mnist_28.h  st_mnist_28.vmfb  st_mnist_28_rv64.h  st_mnist_28_vmfb.h  st_yolo_lc_v1_192.h  st_yolo_lc_v1_192.vmfb  st_yolo_lc_v1_192_int_beta.h  st_yolo_lc_v1_192_int_beta.vmfb  st_yolo_lc_v1_192_int_beta_vmfb.h  st_yolo_lc_v1_192_rv64.h  test.vmfb  yoloface_int8.h  yoloface_int8.vmfb
zoo/scripts/: tflite_to_iree_c.sh
